# Andela-Final-Assessment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  problem_statement.md  requirements.txt  run_local.py
backend/: pyproject.toml  requirements.txt
backend/api/: __init__.py  clerk_auth.py  history_util.py  main.py  openrouter.py
backend/tests/: test_health.py  test_mcp_customer_pin_integration.py  test_meridian_customer_fixtures.py
backend/tests/fixtures/: meridian_test_customers.json
backend/todo_mcp/: __init__.py  __main__.py  server.py  store.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: ChatShell.tsx  globals.css  layout.tsx  page.tsx
frontend/docker-hf/: ChatShell.tsx  layout.tsx  page.tsx
frontend/lib/: api-request-url.ts  upstream-proxy.ts
frontend/scripts/: copy-static.mjs
instructions/: gameplan.md  prompt.md
instructions/agents_knowledge_base/: how_to_add_tools_guardrails_handoffs_structured_outputs_to_openai_agents_sdk.md  how_to_build_a_gradio_ui_for_agent_chat.md  how_to_chain_agents_and_use_a_manager_pattern.md  how_to_connect_to_openai_agents_sdk_using_openrouter.md  how_to_connect_to_openai_library_using_openrouter.md  how_to_enrich_user_data_with_external_apis.md  how_to_integrate_push_notifications_with_agents.md  how_to_parse_and_use_pdf_data_in_agents.md  how_to_register_and_dynamically_dispatch_tools.md  how_to_stream_responses_with_openai_agents_sdk.md  how_to_stream_responses_with_openai_library.md  how_to_work_with_tools_in_openai_library.md  (+1 more)
scripts/: dev.sh  run-backend.sh
(+21 files in other folders)
