[project]
name = "todo-mcp-api"
version = "0.1.0"
description = "FastAPI API, OpenRouter agent, and MCP todo integration"
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.2.0",
  "openai-agents>=0.14.0",
  "openai>=1.59.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "aiosqlite>=0.20.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "pyjwt[crypto]>=2.8.0",
]

[tool.uv]
package = false
