[project]
name = "meridian-support-api"
version = "0.1.0"
description = "Meridian Electronics support chat: FastAPI, OpenRouter agent, remote MCP (Streamable HTTP)"
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.2.0",
  "openai-agents>=0.14.0",
  "openai>=1.59.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "aiosqlite>=0.20.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "pyjwt[crypto]>=2.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "integration: calls the remote Meridian MCP (enable with RUN_MCP_INTEGRATION=1)",
]

[tool.uv]
package = false
